Making this not look horrible on mobile, fix popup z index

--- a/src/components/Head/styles.styl
+++ b/src/components/Head/styles.styl
@@ -59,3 +59,12 @@
     }
   }
 }
+
+@media screen and (max-width: 800px) {
+  .largeButtonContainer {
+    width 50%
+  }
+  .swapDirectionChoice {
+    width: 100%
+  }
+}
