--- a/src/pages/Exchange/styles.styl
+++ b/src/pages/Exchange/styles.styl
@@ -52,3 +52,9 @@
         }
     }
 }
+
+@media screen and (max-width: 800px) {
+    .exchangeContainer {
+        width 100%
+    }
+}
